--- a/template/index.html
+++ b/template/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>Pioneer Sci-Tech Pte. Ltd.</title>
+  <meta name="description" itemprop="description" content="A #1 Singapore Web Design Firm offers cost-effective web services such as website development, eCommerce, CRM, MIS, Mobile APP and other services." />
+  <meta name="keywords" itemprop="keywords" content="Singapore,web design,website design,eCommerce,content management,programming,designer,portal,shopping,cart,online store,mobile app,android,iOS,PHP,ASP,NET,Drupal,Wordpress,Magento,OpenCart,MIS,CRM,CMS,SEO,Online Marketing" />
+  <meta name="author" content="Pioneer Sci-Tech, PST">
+  
+  <title>Pioneer Sci-Tech | Singapore Web Design Company | Website Design</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/animate.min.css" rel="stylesheet"> 
   <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -38,14 +40,14 @@
         <div class="item" style="background-image: url(images/slider/2.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">Grow your business <span>with Us</span></h1>
-            <p class="animated fadeInRightBig">What we do for you not just a website <br />as well as the effort devoted and attention to detail poured</p>
+            <p class="animated fadeInRightBig">What we do for you not just a website <br />as well as the effort devoted and attention to detail poured.</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
         <div class="item" style="background-image: url(images/slider/3.jpg)">
           <div class="caption">
             <h1 class="animated fadeInLeftBig">It's all about your <span>Website Design &amp;</span> <span>Online Branding</span></h1>
-            <p class="animated fadeInRightBig">Talk to us now</p>
+            <p class="animated fadeInRightBig">Talk to us now.</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
         </div>
@@ -74,8 +76,7 @@
             <li class="scroll active"><a href="#home">Home</a></li>
             <li class="scroll"><a href="#services">Service</a></li> 
             <li class="scroll"><a href="#about-us">About Us</a></li>                     
-            <li class="scroll"><a href="#portfolio">Portfolio</a></li>
-            <li class="scroll"><a href="#team">Team</a></li>
+            <!--<li class="scroll"><a href="#portfolio">Portfolio</a></li>-->
             <li class="scroll"><a href="#contact">Contact</a></li>       
           </ul>
         </div>
@@ -94,57 +95,72 @@
       <div class="text-center our-services">
         <div class="row">
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <div class="service-icon">
-              <i class="fa fa-flask"></i>
+            <div class="panel panel-default">
+                  <div class="panel-body">
+                    <img src="images/service/1.jpg" alt="...">
+                  </div>
+                  <div class="panel-heading"><h3>Corporate website design</h3></div>
             </div>
             <div class="service-info">
-              <h3>Corporate website design</h3>
+                
               <p>Business websites should not be boring and dull. It should be visually appealing. Enhance your customers’ experience with web design that is both creative and professional.</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="450ms">
-            <div class="service-icon">
-              <i class="fa fa-umbrella"></i>
+            <div class="panel panel-default">
+                  <div class="panel-body">
+                    <img src="images/service/2.jpg" alt="...">
+                  </div>
+                  <div class="panel-heading"><h3>E-Commerce website design</h3></div>
             </div>
             <div class="service-info">
-              <h3>E-Commerce website design</h3>
-              <p>Online shopping is all about credibility and convenience. Make sure your customer gets both through a well designed and executed eCommerce website.</p>
+              <p>Online shopping is all about credibility and convenience. Make sure your customer gets both through a well-designed and executed eCommerce website.</p>
             </div>
           </div>
          <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
-            <div class="service-icon">
-              <i class="fa fa-gift"></i>
+            <div class="panel panel-default">
+                  <div class="panel-body">
+                    <img src="images/service/3.jpg" alt="...">
+                  </div>
+                  <div class="panel-heading"><h3>Custom web design</h3></div>
             </div>
             <div class="service-info">
-              <h3>Custom web design</h3>
               <p>Custom web design is about meeting your specific online requirements. Design and configure your website according to your evolving business needs. Talk to us, and let us find a perfect solution for you. </p>
             </div>
           </div>
          <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
-            <div class="service-icon">
-              <i class="fa fa-gift"></i>
+            <div class="panel panel-default">
+                  <div class="panel-body">
+                    <img src="images/service/4.jpg" alt="...">
+                  </div>
+                  <div class="panel-heading"><h3>App Development</h3></div>
             </div>
             <div class="service-info">
-              <h3>App Development</h3>
               <p>Today is the era of Smart phones. Users are taking to mobile applications like never before. We use the latest mobile technologies to provide a wide range of mobile applications development and maintenance services.</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
-            <div class="service-icon">
-              <i class="fa fa-gift"></i>
+            <div class="panel panel-default">
+                  <div class="panel-body">
+                    <img src="images/service/5.jpg" alt="...">
+                  </div>
+                  <div class="panel-heading"><h3>Search Engine Optimization</h3></div>
             </div>
             <div class="service-info">
-              <h3>Professional Design</h3>
-              <p>Today’s internet users possess a variety of devices from which they can access websites. Ensure yours is compatible with desktop, mobile and tablet formats. We are committed to clean, modern and and responsive design.</p>
+              
+              <p>SEO is the best online marketing strategy to bring in quality leads for your business. We can help you integrate professional technologies so that bring targeted and potential customer to boost your sale.</p>
             </div>
           </div>
         <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
-            <div class="service-icon">
-              <i class="fa fa-gift"></i>
+            <div class="panel panel-default">
+                  <div class="panel-body">
+                    <img src="images/service/6.jpg" alt="...">
+                  </div>
+                  <div class="panel-heading"><h3>Awesome Support</h3></div>
             </div>
             <div class="service-info">
-              <h3>Awesome Support</h3>
-              <p>Do you have a requirement to maintain a business system which may be out of date and no longer supported for your company? Our developers can always help you with up to date technologies. </p>
+              
+              <p>Do you have a requirement to maintain a business system that may be out of date and no longer supported for your company? Our developers can always help you with up to date technologies. </p>
             </div>
           </div>
         </div>
@@ -163,13 +179,14 @@
         </div>
         <div class="col-sm-6">
             <div>
-                <img class="img-responsive" src="images/about-us.jpg" alt="">
+                <img class="img-responsive" src="images/about-us.png" alt="">
               </div>
         </div>
       </div>
     </div>
   </section><!--/#about-us-->
 
+<!---------------------------------------portfolio
   <section id="portfolio">
     <div class="container">
       <div class="row">
@@ -354,108 +371,12 @@
     <div id="portfolio-single-wrap">
       <div id="portfolio-single">
       </div>
-    </div><!-- /#portfolio-single-wrap -->
-  </section><!--/#portfolio-->
-
-  <section id="team">
-    <div class="container">
-      <div class="row">
-        <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
-          <h2>The Team</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam</p>
-        </div>
-      </div>
-      <div class="team-members">
-        <div class="row">
-          <div class="col-sm-3">
-            <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <div class="member-image">
-                <img class="img-responsive" src="images/team/1.jpg" alt="">
-              </div>
-              <div class="member-info">
-                <h3>Marian Dixon</h3>
-                <h4>CEO &amp; Founder</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              </div>
-              <div class="social-icons">
-                <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="500ms">
-              <div class="member-image">
-                <img class="img-responsive" src="images/team/2.jpg" alt="">
-              </div>
-              <div class="member-info">
-                <h3>Lawrence Lane</h3>
-                <h4>UI/UX Designer</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              </div>
-              <div class="social-icons">
-                <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="800ms">
-              <div class="member-image">
-                <img class="img-responsive" src="images/team/3.jpg" alt="">
-              </div>
-              <div class="member-info">
-                <h3>Lois Clark</h3>
-                <h4>Developer</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              </div>
-              <div class="social-icons">
-                <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="team-member wow flipInY" data-wow-duration="1000ms" data-wow-delay="1100ms">
-              <div class="member-image">
-                <img class="img-responsive" src="images/team/4.jpg" alt="">
-              </div>
-              <div class="member-info">
-                <h3>Marian Dixon</h3>
-                <h4>Support Manager</h4>
-                <p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              </div>
-              <div class="social-icons">
-                <ul>
-                  <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                  <li><a class="rss" href="#"><i class="fa fa-rss"></i></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>            
     </div>
-  </section><!--/#team-->
+  </section>
+-->
+    <!--/#portfolio-->
 
+<!-----------------------------------------------------features
   <section id="features" class="parallax">
     <div class="container">
       <div class="row count">
@@ -481,7 +402,9 @@
         </div>                 
       </div>
     </div>
-  </section><!--/#features-->
+  </section>
+    -->
+    <!--/#features-->
 
 
   <section id="contact">
@@ -525,7 +448,7 @@
                 <ul class="address">
                   <li><i class="fa fa-map-marker"></i> <span> Address:</span> 22 Sin Ming Lane #06-76 Midview City Singapore 573969 </li>
                   <li><i class="fa fa-phone"></i> <span> Phone:</span> +65 0000 0000  </li>
-                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:ilvywebdesign@gmail.com"> ilvywebdesign@gmail.com</a></li>
+                  <li><i class="fa fa-envelope"></i> <span> Email:</span><a href="mailto:support@pst-sg.com"> support@pst-sg.com</a></li>
                   <li><i class="fa fa-globe"></i> <span> Website:</span> <a href="#">www.pst-sg.com</a></li>
                 </ul>
               </div>                            
@@ -547,7 +470,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p>&copy; 2016 Pioneer Sci-Tech Pte. Ltd.</p>
+            <p>Copyright &copy; 2016 Pioneer Sci-Tech Pte. Ltd. All Rights Reserved.</p>
           </div>
         </div>
       </div>
@@ -556,7 +479,7 @@
 
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key= AIzaSyCYUeHrWQvQOAuoO0AQRG_T3mZEqN-T2r8&sensor=true"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyCfAkS5GEnJaIUaXQ5stMVGcS7d0Ph-1cA&sensor=true"></script>
   <script type="text/javascript" src="js/jquery.inview.min.js"></script>
   <script type="text/javascript" src="js/wow.min.js"></script>
   <script type="text/javascript" src="js/mousescroll.js"></script>
