--- a/template/css/main.css
+++ b/template/css/main.css
@@ -12,11 +12,12 @@
 **************************/
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif; 
+  background: url("../images/background.jpg") no-repeat fixed center center / 100% auto;
   font-size: 14px;
   line-height: 24px;
   color: #666;
-  background-color: #fff;
+ /*  background-color: #fff; */
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -69,7 +70,7 @@ h3 {
 }
 
 .btn.btn-primary:hover {
-  background-color: #017fb5;
+  background-color: #017fb5;/*PST blue  #017fb5 green*/
 }
 
 .navbar-nav li a:hover, 
@@ -95,7 +96,8 @@ a:hover {
 }
 
 section {
-  padding: 90px 0;
+   /* padding: 90px 0;   */
+   padding: 0 0;  
 }
 
 .heading {
@@ -143,15 +145,15 @@ section {
   text-align: center;
   text-transform: uppercase;
   z-index: 15;
-  font-size: 18px;
-  font-weight: 300;
+  font-size: 20px;
+  font-weight: 100;
   color: #fff;
 }
 
 #home-slider .caption h1 {
   color: #fff;
   font-size: 60px;
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 30px;
 }
 
@@ -212,7 +214,7 @@ section {
   width: 51px;
   line-height: 48px;
   border-radius: 50%;
-  border:1px solid #fff;  
+  border:1px solid #fff;
   z-index: 20;
   font-size: 24px;
   color: #fff;
@@ -277,6 +279,174 @@ section {
   margin-top: 5px;
 }
 
+
+/* Header img-responsive*/
+.logo-pst{
+  height: 70px;
+  width: 70px;
+   
+}
+.img-responsive {
+  width: 100%;
+}
+ .centered {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    margin-bottom: auto;
+}
+
+.main-header{
+	background-color:#1cb155;
+	/*opacity: 0.5;*/
+} 
+
+
+/* 5. SLIDER - not full scream */
+	#slider{
+		margin-top: 0;  /*pst -smc opacity-header*/
+	}
+
+	#home-carousel  .item {
+		background-position: center top;
+		background-repeat: no-repeat;
+		background-size:cover;
+		width:100%;
+		height: 800px;
+	}
+
+	#home-carousel .item:before{
+		background-color: #000;
+		content: "";
+		height: 100%;
+		top: 0;
+		left: 0;
+		opacity: 0.5;
+		position: absolute;
+		width: 100%;
+	}
+
+	.carousel-caption {
+		left: 15px;
+		right: 15px;
+		top: 50%;
+		font-size: 15px;
+		text-align: left;
+		color: #fff;
+		text-shadow: none;
+		margin-top: -130px;	
+	}
+
+	.carousel-caption h1 {
+		margin-bottom:40;
+		line-height:27px;
+		letter-spacing:2px;
+		font-weight:100;
+        color: #fff;
+        /*font-size: 60px;*/
+        font-weight: 500;
+	}
+
+	.carousel-caption h2 {
+		/*font-size:60px;*/
+		font-weight:600;
+		margin-top:0px;
+		text-transform:uppercase;
+		letter-spacing:2px;
+		margin-bottom:20px;
+        color: #028fcc;  
+	}
+
+	.home-carousel-left, 
+	.home-carousel-right {	
+		background-color: #f0f0f0;
+		color:#000;
+		font-size: 32px;
+		height: 40px;
+		line-height: 40px;
+		margin-top: -20px;
+		position: absolute;
+		text-align: center;
+		top: 50%;
+		width: 32px;
+		z-index: 999;
+		-webkit-transition: 300ms;
+		-moz-transition: 300ms;
+		-o-transition: 300ms;
+		-ms-transition: 300ms;
+		transition: 300ms;
+	}
+
+	.home-carousel-left {
+		left:-32px;
+	}
+
+	.home-carousel-right {
+		right:-32px;
+	}
+
+	#home-carousel:hover .home-carousel-left {
+		left:0;
+	}
+
+	#home-carousel:hover .home-carousel-right {
+		right:0;
+	}
+	/* Carousel animation */
+
+	#home-carousel .item h1, 
+	#home-carousel .item h2, 
+	#home-carousel .item p {
+		opacity:0;
+		-moz-transform: scale(0.5);
+		-webkit-transform: scale(0.5);
+		-o-transform: scale(0.5);
+		-ms-transform: scale(0.5);
+		transform: scale(0.5);
+	}
+
+	#home-carousel .item h1 {
+		-webkit-transition: all 0.5s ease-in-out 0.15s;
+		-moz-transition: all 0.5s ease-in-out 0.15s;
+		-ms-transition: all 0.5s ease-in-out 0.15s;
+		-o-transition: all 0.5s ease-in-out 0.15s;
+		transition: all 0.5s ease-in-out 0.15s;
+        font-size: 56px;
+        padding-bottom: 30px;
+	}
+
+	#home-carousel .item.active h1, 
+	#home-carousel .item.active h2, 
+	#home-carousel .item.active p {
+		opacity:1;
+		-moz-transform: scale(1);
+		-webkit-transform: scale(1);
+		-o-transform: scale(1);
+		-ms-transform: scale(1);
+		transform: scale(1);
+	}
+
+	#home-carousel .item h2 {
+		-webkit-transition: all 0.5s ease-in-out 0.30s;
+		-moz-transition: all 0.5s ease-in-out 0.30s;
+		-ms-transition: all 0.5s ease-in-out 0.30s;
+		-o-transition: all 0.5s ease-in-out 0.30s;
+		transition: all 0.5s ease-in-out 0.30s;
+        font-size: 70px;
+	}
+
+	#home-carousel .item p {
+		-webkit-transition: all 0.5s ease-in-out 0.45s;
+		-moz-transition: all 0.5s ease-in-out 0.45s;
+		-ms-transition: all 0.5s ease-in-out 0.45s;
+		-o-transition: all 0.5s ease-in-out 0.45s;
+		transition: all 0.5s ease-in-out 0.45s;
+	}
+	
+
+
+
 /*************************
 ********Service CSS*******
 **************************/
@@ -293,21 +463,21 @@ section {
   transition: background-color 0.2s ease;
 }
 
-.our-services .col-sm-4:hover .service-icon {
+/* .our-services .col-sm-4:hover  .service-icon  {
   background-color: #333;
-}
+} */
 
 .our-services .col-sm-4 {
   border-right:1px solid #f2f2f2;
   border-bottom:1px solid #f2f2f2;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
 }
 
 .our-services .col-sm-4:nth-child(4), 
 .our-services .col-sm-4:nth-child(5), 
 .our-services .col-sm-4:nth-child(6) {
   border-bottom:0;
-  padding-top: 30px;
+  padding-top: 60px;
 }
 
 .our-services .col-sm-4:nth-child(3), 
@@ -316,7 +486,7 @@ section {
 }
 
 .service-info h3 {
-  margin-top: 0px;
+  margin-top: 35px;
 }
 
 /*************************
@@ -324,7 +494,7 @@ section {
 **************************/
 #about-us {
   background-image: url(../images/about-bg.jpg);
-  padding: 60px 0;
+  padding: 130px 0;
 }
 
 #about-us h2 {
@@ -364,6 +534,7 @@ section {
   -webkit-transition: width 2s ease-in-out;
   transition:  width 2s ease-in-out;
 }
+
 
 /*************************
 ********portfolio CSS*****
@@ -493,370 +664,39 @@ section {
   margin-left: -17px;
 }
 
-/*************************
-*********Team CSS*********
-**************************/
-#team {
-  padding-top: 0;
-}
-
-.team-members {
-  margin-bottom: 25px;
-}
-
-.social-icons {
-  margin-top:30px;
-  text-align: center;
-}
-
-.social-icons ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: inline-block;
-}
-
-.social-icons ul li {
-  float: left;
-  margin-right: 8px;
-}
-
-.social-icons ul li:last-child {
-  margin-right: 0;
-}
-
-.social-icons ul li a {
-  color:#fff;
-  background-color: #d9d9d9;
-  height: 36px;
-  width: 36px;
-  line-height: 36px;
-  display: block;
-  font-size: 16px;
-  opacity: 0.8;
-}
-
-.social-icons ul li a:hover {
-  opacity: 1;
-  -webkit-transform: scale(1.2);
-  transform: scale(1.2);
-}
-
-.team-member {
-  text-align: center;
-  color: #333;
-  font-size: 14px;
-}
-
-.team-member:hover .social-icons ul li a.facebook {
-  background-color: #3b5999;
-}
-.team-member:hover .social-icons ul li a.twitter {
-  background-color: #2ac6f7;
-}
-.team-member:hover .social-icons ul li a.dribbble {
-  background-color: #ff5b92;
-}
-.team-member:hover .social-icons ul li a.linkedin {
-  background-color: #036dc0;
-}
-.team-member:hover .social-icons ul li a.rss {
-  background-color: #ff6b00;
-}
-
-#team .img-responsive {
-  width: 100%;
-}
-
-.member-info h3 {
-  margin-top: 35px;
-}
-
-.member-info h4 {
-  font-size: 14px;
-  margin-bottom: 15px;
-  color: #999;
-}
-
 
 /*************************
-*******Features CSS*******
+**********Place Holder*****
 **************************/
-#features {
-  text-align: center;
-  background-image: url(../images/features-bg.jpg);
-}
-
-#features i {
-  font-size: 48px;
-}
-
-#features h3 {
-  margin-top: 15px;
-  font-size: 30px;
-  margin-bottom: 7px;
-  color: #fff;
-}
-
-#features .slider-overlay {
-  opacity: 0.8;
-}
-
-
-/*************************
-*****Pricing Table CSS****
-**************************/
-.pricing-table {
-  text-align: center;
-}
-
-.single-table {
-  padding: 30px 20px 20px;
-  border:1px solid #f2f2f2;
-}
-
-.single-table h3 {
-  margin-top: 0;
-  padding: 0;
-  font-size: 18px;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-
-.price {
-  font-size: 36px;
-  line-height: 36px;
-}
-
-.price span {
-  font-size: 14px;
-  line-height: 14px;
-}
-
-.single-table ul {
-  list-style: none;
-  padding: 0;
-  margin: 30px 0;
-}
-
-.single-table ul li {
-  line-height: 30px;
-}
-
-.single-table.featured {  
-  color: #fff;
-}
-
-.single-table.featured h3 { 
-  color: #fff;
-}
-
-.single-table.featured .btn.btn-primary {
-  background-color: #fff;
-}
-
-/*************************
-********Twitter CSS*******
-**************************/
-#twitter {
-  background-image: url(../images/twitter-bg.jpg);
-}
-
-#twitter > div {
-  text-align: center;
-  position: relative;
-}
-
-#twitter-carousel {
-  position: relative;
-  z-index: 15
-}
-
-.twitter-icon {
-  position: relative;
-  z-index: 15;
-  color: #fff;
-}
-
-.twitter-icon .fa-twitter {
-  font-size: 24px;
-  height: 64px;
-  width: 64px;
-  line-height: 65px;
-  border-radius: 50%; 
-  position: relative;
-}
-
-.twitter-icon .fa-twitter:after {
-  position: absolute;
-  content: "";
-  border-width: 8px;
-  border-style: solid;
-  left: 24px;
-  bottom: -14px;
-}
-
-#twitter-carousel .item {
-  padding: 0 55px;
-}
-
-#twitter-carousel .item a {
-  color: #fff;
-}
-
-.twitter-icon h4 {
-  text-transform: uppercase;
-  margin-top: 25px;
-  margin-bottom: 25px;
-  color: #fff;
-}
-
-.twitter-left-control, 
-.twitter-right-control {
-  position: absolute;
-  top: 50%;
-  color: #fff;
-  border: 1px solid #fafafa;
-  height:34px;
-  width: 34px;
-  line-height: 31px;
-  margin-top: -17px;
-  font-size: 18px;
-  border-radius: 50%;
-  z-index: 15
-}
-
-.twitter-left-control {
-  left: 80px;
-} 
-
-.twitter-right-control {
-  right: 80px
-}
-
-.twitter-left-control:hover, .twitter-right-control:hover {
-  color: #fff;
-}
-
-
-/*************************
-**********Blog CSS********
-**************************/
-
-.post-thumb {
-  position: relative;
-}
-
-.post-icon {
-  position: absolute;
-  top:10px;
-  right:10px;
-  height: 30px;
-  width: 30px;
-  line-height: 30px;
-  border-radius:4px;
-  text-align: center;
-  color: #fff;
-  font-size: 12px;
-}
-
-.post-meta {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: #fff;
-  font-size: 12px;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-.post-meta span {
-  margin-right: 16px;
-}
-
-#post-carousel .carousel-indicators {
-  bottom: 3px;
-  left: 90%;
-}
-
-.blog-left-control, .blog-right-control {
-  position: absolute;
-  top: 45%;
-  width: 30px;
-  text-align: center;
-  color: rgba(255,255,255,.7);
-  font-size: 36px;
-}
-
-.blog-left-control {
-  left: 0;
-}
-
-.blog-right-control {
-  right: 0;
-}
-
-.blog-left-control:hover, .blog-right-control:hover {
-  color: #fff;  
-}
-
-.entry-header h3 a {
-  line-height: 30px;
-}
-
-.entry-header .date, 
-.entry-header .cetagory {
-  display: inline-block;
-  font-size: 11px;
-  font-weight: 600;
-  margin-bottom: 30px;
-  text-transform: uppercase;
-  position: relative;
-}
-
-.entry-header .date:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom:-22px;
-  width: 20px;
-  height: 3px;
-}
-
-.entry-content {
-  font-size: 14px;
-}
-
-.load-more {
-  display:block;
-  text-align: center;
-  margin-top: 70px;
-}
-
-.btn-loadmore {
-  border: 1px solid #f2f2f2;
-  color: #666666;
-  font-size: 14px;
-  font-weight: 600;
-  padding: 15px 125px;
-  text-transform: uppercase;
-}
-
-.btn-loadmore:hover {
-  color:#fff;
+#process{
+    padding: 60px 0; 
 }
 
 /*************************
 **********Contact CSS*****
 **************************/
+.processbar{
+    width:auto;
+    height: 200px;
+    margin-top: 10px;
+    margin-left: 140px;
+}
+.process-right{
+    width:auto;
+    height: 200px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
 
 #contact {
-  padding-top: 45px;
+
   padding-bottom: 0;
 }
 
 #google-map {
-  height: 350px;
+  height: 300px;
+  width:auto;
+  padding-left:70px;
 }
 
 #contact-us {
