--- a/template/index.html
+++ b/template/index.html
@@ -22,7 +22,7 @@
   <![endif]-->
   
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="images/favicon1.png">
+  <link rel="shortcut icon" href="images/favicon.png">
 </head><!--/head-->
 
 <body>
